# libvalce

./: README.md  meson.build
src/: libvalce-version.h.in  libvalce.c  libvalce.h  meson.build
